tests/toylang/neg/001063_mutation.toylang
program a = { if a then sleep a sleep; } .
